Fixed parse_url issue and navbar z-index

--- a/static/home.css
+++ b/static/home.css
@@ -103,7 +103,7 @@
 			width: 100%;
 			height: inherit;
 			opacity: 0;
-			z-index: 1;
+			z-index: -1;
 			background-color: #ffffff;
 			background-image: url("images/overlay.png"), -moz-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35));
 			background-image: url("images/overlay.png"), -webkit-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35));
